# ucsd-psystem-xc

./: .gitignore  AUTHORS  BUILDING  LICENSE  Makefile.in  README  aegis.conf  configure  meson.build
etc/: BUILDING.man  Howto.conf.in  README.man  apt-get-depends.cook  autoconf.cook  change_log.man  check-tarball.sh  check_libexplain_uses.sh  configure.ac  documentation.cook  doxygen.cfg  doxygen.cook  doxygen.sh  example.assemble.sh  example.compile.sh  gcov.cook  howto.cook  howto_run_apple_compiler.txt  internals2.man  metrics.cook  new.sh  page-list.awk  ppa-upload.sh  ref-ptx.ignore  ref-ptx.sh  ref-ptx1.awk  ref-ptx2.awk  reference.man  sloccount.sh  ssp.awk  tags.cook  ucsd-psystem-xc.lsm  yacc.cook
lib/: anonymous_name.cc  anonymous_name.h  bit_address.cc  bit_address.h  bitmap.cc  bitmap.h  bitrev.cc  bitrev.h  byte_sex.cc  byte_sex.h  cardinal.cc  cardinal.h  code_source_map.cc  code_source_map.h  codefile.cc  codefile.h  columnar.cc  columnar.h  config.h.in  config.messy.h  debug.cc  debug.h  disassembler.cc  disassembler.h  discolumns.cc  discolumns.h  dislabel.cc  dislabel.h  endof.h  expression.cc  expression.h  format_printf.h  fstrcmp.cc  fstrcmp.h  get_filename.cc  get_filename.h  gmatch.cc  gmatch.h  hexdump.cc  hexdump.h  (+75 more)
lib/ac/: assert.h  ctype.h  errno.h  float.h  fnmatch.h  getopt.h  iostream  limits.h  list  map  math.h  signal.h  stdarg.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  time.h  typeinfo  vector
lib/bitmap/: factory.cc  invert.cc  invert.h  png.cc  png.h  raw.cc  raw.h
lib/case/: list.cc  list.h  range.cc  range.h
lib/codefile/: copy_to.cc  disassemble.cc  file.cc  file.h  filter.cc  filter.h  get_word.cc  print_library_map.cc  put_word.cc
lib/disassembler/: 6502.cc  6502.h  factory.cc  hexdump.cc  hexdump.h  pcode.cc  pcode.h  pdp11.cc  pdp11.h
lib/expression/: addition.cc  addition.h  assignment.cc  assignment.h  bitwise_and.cc  bitwise_and.h  bitwise_not.cc  bitwise_not.h  bitwise_or.cc  bitwise_or.h  boolean.cc  boolean.h  char.cc  char.h  dereference.cc  dereference.h  empty.cc  empty.h  enum_tag.cc  enum_tag.h  eq.cc  eq.h  error.cc  error.h  function_call.cc  function_call.h  ge.cc  ge.h  get_boolean_value.cc  get_integer_value.cc  get_real_value.cc  get_string_value.cc  gt.cc  gt.h  in.cc  in.h  integer.cc  integer.h  integer_division.cc  integer_division.h  (+56 more)
lib/input/: divert.cc  divert.h  factory.cc  file.cc  file.h  one_line.cc  stdin.cc  stdin.h  string.cc  string.h  ucsd_text.cc  ucsd_text.h
lib/interval/: append.cc  assignment.cc  constructor1.cc  constructor2.cc  copy_constructor.cc  coverage.cc  default_constructor.cc  difference.cc  empty.cc  equal.cc  first_interval_only.cc  flatten.cc  get_highest.cc  get_lowest.cc  intersection.cc  member.cc  pad.cc  print.cc  representation.cc  scan.cc  union.cc  valid.cc
lib/label/: placebo.cc  placebo.h
lib/link_info/: list.cc  list.h  print_library_map.cc
lib/name_type/: list.cc  list.h
lib/output/: factory.cc  file.cc  file.h  filter.cc  filter.h  from_input.cc  null.cc  null.h  stdout.cc  stdout.h  stracc.cc  stracc.h  string_list.cc  string_list.h  text_decode.cc  text_decode.h  text_encode.cc  text_encode.h  wrap_cook.cc  wrap_cook.h  wrap_make.cc  wrap_make.h
lib/pascal/: grammar.h  grammar.y  lex.cc  lex.h
lib/rcstring/: accumulator.cc  accumulator.h  basename.cc  bool.cc  capitalize.cc  catenate.cc  clear.cc  dirname.cc  downcase.cc  ends_with_nc.cc  field.cc  ge.cc  gizzards.cc  gizzards.h  gmatch.cc  gt.cc  identifier.cc  le.cc  lead_prefix.cc  list.h  long.cc  lt.cc  printf.cc  quote.cc  quote_c.cc  quote_pascal.cc  replace.cc  spaces.cc  starts_with_nc.cc  substring.cc  to_long.cc  traili_suffi.cc  trim.cc  trim_right.cc  trim_suffix.cc  upcase.cc
lib/scope/: builtin.cc  builtin.h  function.cc  function.h  interface.cc  interface.h  program.cc  program.h  record.cc  record.h  stack.cc  stack.h  temporary.cc  temporary.h  unit.cc  unit.h
lib/segment/: builder.cc  builder.h  concrete.cc  concrete.h  copy_to.cc  disassemble.cc  filter.cc  filter.h  print_library_map.cc
lib/statement/: case.cc  case.h  compound.cc  compound.h  empty.cc  empty.h  expression.cc  expression.h  for.cc  for.h  goto.cc  goto.h  if.cc  if.h  infinite_loop.cc  infinite_loop.h  label.cc  label.h  list.cc  list.h  until.cc  until.h  while.cc  while.h  writeln.cc  writeln.h
lib/symbol/: enumerated.cc  enumerated.h  expression.cc  expression.h  function.cc  function.h  functor.cc  functor.h  label.cc  label.h  list.cc  list.h  program.cc  program.h  typedef.cc  typedef.h  unit.cc  unit.h  variable.cc  variable.h
lib/symtab/: assign.cc  clear.cc  dump.cc  (+11 more)
man/: meson.build
test/: meson.build
test_cardinal/: main.cc  meson.build
test_long_integer/: grammar.h  grammar.y  lex.cc  lex.h  main.cc  meson.build
ucsdpsys/: main.cc  meson.build  volume.cc  volume.h
ucsdpsys_assemble/: assembler.cc  assembler.h  grammar.y  lex.cc  lex.h  listing.cc  listing.h  main.cc  meson.build  opcode.cc  opcode.h  patch.cc  patch.h  personality.cc  personality.h
ucsdpsys_charset/: arch.cc  arch.h  font.cc  font.h  glyph.cc  glyph.h  main.cc  meson.build  pretty_char_name.cc  pretty_char_name.h  sink.cc  sink.h  source.cc  source.h
ucsdpsys_compile/: main.cc  meson.build
ucsdpsys_depends/: context.cc  context.h  language.cc  language.h  main.cc  meson.build
ucsdpsys_disassemble/: main.cc  meson.build
ucsdpsys_downcase/: main.cc  meson.build
ucsdpsys_errors/: arch.cc  arch.h  main.cc  meson.build
ucsdpsys_foto/: main.cc  meson.build
ucsdpsys_libmap/: main.cc  meson.build
ucsdpsys_librarian/: main.cc  meson.build
ucsdpsys_link/: link_info_entry.cc  link_info_entry.h  main.cc  meson.build  segrec.cc  segrec.h  workrec.cc  workrec.h
ucsdpsys_littoral/: main.cc  meson.build
ucsdpsys_opcodes/: arch.cc  arch.h  bitflip.cc  bitflip.h  decode.cc  decode.h  encode.cc  encode.h  main.cc  meson.build
ucsdpsys_osmakgen/: collect.cc  collect.h  main.cc  meson.build  target.cc  target.h
ucsdpsys_pretty/: main.cc  meson.build
ucsdpsys_setup/: main.cc  meson.build
(+2325 files in other folders)
