conf = configuration_data()

if (cpp.has_function('backtrace') or
    cpp.has_function('backtrace', prefix : '#include <execinfo.h>'))
  conf.set('HAVE_BACKTRACE', 1)
endif
if cpp.has_header('fnmatch.h')
  conf.set('HAVE_FNMATCH_H', 1)
endif
if (cpp.has_function('fnmatch') or
    cpp.has_function('fnmatch', prefix : '#include <fnmatch.h>'))
  conf.set('HAVE_FNMATCH', 1)
endif
if cpp.has_header('getopt.h')
  conf.set('HAVE_GETOPT_H', 1)
endif
if cpp.has_header('stdint.h')
  conf.set('HAVE_STDINT_H', 1)
endif

lib_config_h = configure_file(
  input : 'mesonconfig.h.in',
  output : 'config.h',
  configuration : conf,
)

lib_libdir_cc = configure_file(
  input : 'libdir.cc.in',
  output : 'libdir.cc',
  configuration : {
    'bindir': get_option('prefix') / get_option('bindir'),
    'libdir': get_option('prefix') / get_option('libdir'),
    'datarootdir': get_option('prefix') / get_option('datadir'),
    'datadir': get_option('prefix') / get_option('datadir'),
    'mandir': get_option('prefix') / get_option('mandir'),
    'sysconfdir': get_option('prefix') / get_option('sysconfdir'),
  }
)

lib_pascal_grammar_ch = bison_gen.process(
  'pascal/grammar.y', preserve_path_from : meson.project_source_root(),
)

lib_sources = [
  lib_config_h,
  lib_libdir_cc,
  lib_pascal_grammar_ch,
  'anonymous_name.cc',
  'bit_address.cc',
  'bitmap.cc',
  'bitmap/factory.cc',
  'bitmap/invert.cc',
  'bitmap/png.cc',
  'bitmap/raw.cc',
  'bitrev.cc',
  'byte_sex.cc',
  'cardinal.cc',
  'case/list.cc',
  'case/range.cc',
  'code_source_map.cc',
  'codefile.cc',
  'codefile/copy_to.cc',
  'codefile/disassemble.cc',
  'codefile/file.cc',
  'codefile/file/i_3.cc',
  'codefile/file/i_5.cc',
  'codefile/file/ii_0.cc',
  'codefile/file/ii_1.cc',
  'codefile/filter.cc',
  'codefile/filter/insert.cc',
  'codefile/filter/notice.cc',
  'codefile/filter/remove_by_name.cc',
  'codefile/filter/remove_by_number.cc',
  'codefile/get_word.cc',
  'codefile/print_library_map.cc',
  'codefile/put_word.cc',
  'columnar.cc',
  'debug.cc',
  'disassembler.cc',
  'disassembler/6502.cc',
  'disassembler/factory.cc',
  'disassembler/hexdump.cc',
  'disassembler/pcode.cc',
  'disassembler/pcode/i_3.cc',
  'disassembler/pcode/i_5.cc',
  'disassembler/pcode/ii_0.cc',
  'disassembler/pcode/ii_1.cc',
  'disassembler/pdp11.cc',
  'discolumns.cc',
  'dislabel.cc',
  'expression.cc',
  'expression/addition.cc',
  'expression/assignment.cc',
  'expression/bitwise_and.cc',
  'expression/bitwise_not.cc',
  'expression/bitwise_or.cc',
  'expression/boolean.cc',
  'expression/char.cc',
  'expression/dereference.cc',
  'expression/dispatcher/binary.cc',
  'expression/dispatcher/binary/functor.cc',
  'expression/dispatcher/unary.cc',
  'expression/empty.cc',
  'expression/enum_tag.cc',
  'expression/eq.cc',
  'expression/error.cc',
  'expression/function_call.cc',
  'expression/ge.cc',
  'expression/get_boolean_value.cc',
  'expression/get_integer_value.cc',
  'expression/get_real_value.cc',
  'expression/get_string_value.cc',
  'expression/gt.cc',
  'expression/in.cc',
  'expression/integer.cc',
  'expression/integer_division.cc',
  'expression/le.cc',
  'expression/lint2lint.cc',
  'expression/lint_from_integer.cc',
  'expression/list.cc',
  'expression/logical_and.cc',
  'expression/logical_not.cc',
  'expression/logical_or.cc',
  'expression/long_integer.cc',
  'expression/lt.cc',
  'expression/modulo.cc',
  'expression/multiplication.cc',
  'expression/name.cc',
  'expression/ne.cc',
  'expression/negate.cc',
  'expression/nil.cc',
  'expression/paoc_from_string.cc',
  'expression/real.cc',
  'expression/real_division.cc',
  'expression/real_from_integer.cc',
  'expression/scan.cc',
  'expression/set.cc',
  'expression/set2set.cc',
  'expression/sgs.cc',
  'expression/srs.cc',
  'expression/string.cc',
  'expression/subtraction.cc',
  'expression/ternary.cc',
  'expression/xor.cc',
  'fstrcmp.cc',
  'get_filename.cc',
  'gmatch.cc',
  'hexdump.cc',
  'input.cc',
  'input/divert.cc',
  'input/factory.cc',
  'input/file.cc',
  'input/one_line.cc',
  'input/stdin.cc',
  'input/string.cc',
  'input/ucsd_text.cc',
  'interval.cc',
  'interval/append.cc',
  'interval/assignment.cc',
  'interval/constructor1.cc',
  'interval/constructor2.cc',
  'interval/copy_constructor.cc',
  'interval/coverage.cc',
  'interval/default_constructor.cc',
  'interval/difference.cc',
  'interval/empty.cc',
  'interval/equal.cc',
  'interval/first_interval_only.cc',
  'interval/flatten.cc',
  'interval/get_highest.cc',
  'interval/get_lowest.cc',
  'interval/intersection.cc',
  'interval/member.cc',
  'interval/pad.cc',
  'interval/print.cc',
  'interval/representation.cc',
  'interval/scan.cc',
  'interval/union.cc',
  'interval/valid.cc',
  'label.cc',
  'label/placebo.cc',
  'library_map_columns.cc',
  'link_info.cc',
  'link_info/list.cc',
  'link_info/list/print_library_map.cc',
  'link_info/print_library_map.cc',
  'link_info_type.cc',
  'location.cc',
  'long_integer.cc',
  'mtype.cc',
  'name_type.cc',
  'name_type/list.cc',
  'opformat.cc',
  'output.cc',
  'output/factory.cc',
  'output/file.cc',
  'output/filter.cc',
  'output/filter/expand.cc',
  'output/filter/heading.cc',
  'output/filter/prefix.cc',
  'output/filter/suffix.cc',
  'output/filter/wrap.cc',
  'output/from_input.cc',
  'output/null.cc',
  'output/stdout.cc',
  'output/stracc.cc',
  'output/string_list.cc',
  'output/text_decode.cc',
  'output/text_encode.cc',
  'output/wrap_cook.cc',
  'output/wrap_make.cc',
  'p_machine.cc',
  'pascal/lex.cc',
  'pascal_id.cc',
  'path_join.cc',
  'rcstring.cc',
  'rcstring/accumulator.cc',
  'rcstring/accumulator/pop_front.cc',
  'rcstring/accumulator/printf.cc',
  'rcstring/basename.cc',
  'rcstring/bool.cc',
  'rcstring/capitalize.cc',
  'rcstring/catenate.cc',
  'rcstring/clear.cc',
  'rcstring/dirname.cc',
  'rcstring/downcase.cc',
  'rcstring/ends_with_nc.cc',
  'rcstring/field.cc',
  'rcstring/ge.cc',
  'rcstring/gizzards.cc',
  'rcstring/gmatch.cc',
  'rcstring/gt.cc',
  'rcstring/identifier.cc',
  'rcstring/le.cc',
  'rcstring/lead_prefix.cc',
  'rcstring/list/appelistuniq.cc',
  'rcstring/list/append.cc',
  'rcstring/list/append_list.cc',
  'rcstring/list/append_uniqu.cc',
  'rcstring/list/assign_op.cc',
  'rcstring/list/clear.cc',
  'rcstring/list/constructor.cc',
  'rcstring/list/copy.cc',
  'rcstring/list/destructor.cc',
  'rcstring/list/equal.cc',
  'rcstring/list/gmatch.cc',
  'rcstring/list/intersection.cc',
  'rcstring/list/member.cc',
  'rcstring/list/member_nocas.cc',
  'rcstring/list/pop_back.cc',
  'rcstring/list/pop_front.cc',
  'rcstring/list/prepend.cc',
  'rcstring/list/prepend_list.cc',
  'rcstring/list/quote.cc',
  'rcstring/list/remove.cc',
  'rcstring/list/remove_list.cc',
  'rcstring/list/sort.cc',
  'rcstring/list/sort_long_short.cc',
  'rcstring/list/sort_nocase.cc',
  'rcstring/list/sort_vers.cc',
  'rcstring/list/str2wl.cc',
  'rcstring/list/subset.cc',
  'rcstring/list/tail.cc',
  'rcstring/list/validate.cc',
  'rcstring/list/wl2str.cc',
  'rcstring/list/xor.cc',
  'rcstring/long.cc',
  'rcstring/lt.cc',
  'rcstring/printf.cc',
  'rcstring/quote.cc',
  'rcstring/quote_c.cc',
  'rcstring/quote_pascal.cc',
  'rcstring/replace.cc',
  'rcstring/spaces.cc',
  'rcstring/starts_with_nc.cc',
  'rcstring/substring.cc',
  'rcstring/to_long.cc',
  'rcstring/traili_suffi.cc',
  'rcstring/trim.cc',
  'rcstring/trim_right.cc',
  'rcstring/trim_suffix.cc',
  'rcstring/upcase.cc',
  'read_whole_directory.cc',
  'scope.cc',
  'scope/builtin.cc',
  'scope/function.cc',
  'scope/function/unit.cc',
  'scope/interface.cc',
  'scope/program.cc',
  'scope/record.cc',
  'scope/stack.cc',
  'scope/temporary.cc',
  'scope/temporary/compound.cc',
  'scope/temporary/with.cc',
  'scope/unit.cc',
  'segfault.cc',
  'seginfo.cc',
  'segkind.cc',
  'segment.cc',
  'segment/builder.cc',
  'segment/builder/code.cc',
  'segment/builder/interface.cc',
  'segment/builder/stack.cc',
  'segment/concrete.cc',
  'segment/copy_to.cc',
  'segment/disassemble.cc',
  'segment/filter.cc',
  'segment/filter/renumber.cc',
  'segment/print_library_map.cc',
  'segversion.cc',
  'set.cc',
  'statement.cc',
  'statement/case.cc',
  'statement/compound.cc',
  'statement/empty.cc',
  'statement/expression.cc',
  'statement/for.cc',
  'statement/goto.cc',
  'statement/if.cc',
  'statement/infinite_loop.cc',
  'statement/label.cc',
  'statement/list.cc',
  'statement/until.cc',
  'statement/while.cc',
  'statement/writeln.cc',
  'symbol.cc',
  'symbol/enumerated.cc',
  'symbol/expression.cc',
  'symbol/expression/constant.cc',
  'symbol/expression/with.cc',
  'symbol/function.cc',
  'symbol/functor.cc',
  'symbol/functor/with.cc',
  'symbol/label.cc',
  'symbol/list.cc',
  'symbol/program.cc',
  'symbol/typedef.cc',
  'symbol/unit.cc',
  'symbol/variable.cc',
  'symbol/variable/external.cc',
  'symbol/variable/normal.cc',
  'symtab.cc',
  'symtab/assign.cc',
  'symtab/clear.cc',
  'symtab/dump.cc',
  'symtab/iterator.cc',
  'symtab/keys.cc',
  'symtab/query.cc',
  'symtab/query_fuzzy.cc',
  'symtab/remove.cc',
  'symtab/remove2.cc',
  'symtab/split.cc',
  'symtab/valid.cc',
  'symtab/walk.cc',
  'tcontrol.cc',
  'tcontrol/bool.cc',
  'tcontrol/bool/ambiguous.cc',
  'tcontrol/bool/ignore.cc',
  'tcontrol/bool/inst_var_not.cc',
  'tcontrol/bool/inst_var_not_implicit.cc',
  'tcontrol/bool/instance_variable.cc',
  'tcontrol/bool/instance_variable_implicit.cc',
  'tcontrol/bool/method.cc',
  'tcontrol/bool/method_implicit.cc',
  'tcontrol/bool/method_not.cc',
  'tcontrol/bool/method_not_implicit.cc',
  'tcontrol/bool/variable.cc',
  'tcontrol/int8min.cc',
  'tcontrol/list.cc',
  'tcontrol/noarg.cc',
  'tcontrol/noarg/ignore.cc',
  'tcontrol/string.cc',
  'tcontrol/string/function.cc',
  'tcontrol/string/ignore.cc',
  'tcontrol/string/method.cc',
  'tcontrol/too_late.cc',
  'time_value.cc',
  'translator.cc',
  'translator/addition.cc',
  'translator/and.cc',
  'translator/array_index.cc',
  'translator/assignment.cc',
  'translator/builtin.cc',
  'translator/case.cc',
  'translator/char.cc',
  'translator/comment.cc',
  'translator/division.cc',
  'translator/dot.cc',
  'translator/enum.cc',
  'translator/eq.cc',
  'translator/for.cc',
  'translator/ge.cc',
  'translator/gt.cc',
  'translator/if.cc',
  'translator/label.cc',
  'translator/le.cc',
  'translator/lt.cc',
  'translator/modulo.cc',
  'translator/multiplication.cc',
  'translator/ne.cc',
  'translator/negate.cc',
  'translator/not.cc',
  'translator/or.cc',
  'translator/record.cc',
  'translator/set.cc',
  'translator/sizeof.cc',
  'translator/subtraction.cc',
  'translator/type_lookup.cc',
  'translator/unit.cc',
  'translator/until.cc',
  'translator/uses.cc',
  'translator/var_statement.cc',
  'translator/variant_record.cc',
  'translator/while.cc',
  'translator/with.cc',
  'type.cc',
  'type/anything.cc',
  'type/array.cc',
  'type/boolean.cc',
  'type/char.cc',
  'type/enumerated.cc',
  'type/error.cc',
  'type/file.cc',
  'type/forward.cc',
  'type/function.cc',
  'type/get_return_type.cc',
  'type/integer.cc',
  'type/label.cc',
  'type/list.cc',
  'type/long_integer.cc',
  'type/long_integer/sized.cc',
  'type/long_integer/unsized.cc',
  'type/nothing.cc',
  'type/pointer.cc',
  'type/pointer/byte.cc',
  'type/pointer/packed.cc',
  'type/pointer/unpacked.cc',
  'type/program.cc',
  'type/real.cc',
  'type/record.cc',
  'type/reference.cc',
  'type/reference/implicit.cc',
  'type/set.cc',
  'type/set/sized.cc',
  'type/set/unsized.cc',
  'type/string.cc',
  'type/subrange.cc',
  'type/unit.cc',
  'variable/name.cc',
  'variable/name/list.cc',
  'variant.cc',
  'version.cc',
  'version_stamp.cc',
]

lib_deps = [
  libexplain_dep,
  boost_dep,
  libpng_headers_dep
]

lib_lib = static_library(
  'libucsd-psystem-xs',
  sources : lib_sources,
  include_directories : root_inc,
  implicit_include_directories : false,
  dependencies : lib_deps,
  install : false,
)
