install_man(
  'man1/ucsdpsys.1',
  'man1/ucsdpsys_assemble.1',
  'man1/ucsdpsys_charset.1',
  'man1/ucsdpsys_compile.1',
  'man1/ucsdpsys_depends.1',
  'man1/ucsdpsys_disassemble.1',
  'man1/ucsdpsys_downcase.1',
  'man1/ucsdpsys_errors.1',
  'man1/ucsdpsys_foto.1',
  'man1/ucsdpsys_history.1',
  'man1/ucsdpsys_libmap.1',
  'man1/ucsdpsys_librarian.1',
  'man1/ucsdpsys_link.1',
  'man1/ucsdpsys_littoral.1',
  'man1/ucsdpsys_opcodes.1',
  'man1/ucsdpsys_osmakgen.1',
  'man1/ucsdpsys_pretty.1',
  'man1/ucsdpsys_setup.1',
  'man1/ucsdpsys_xc_license.1',
  'man5/ucsdpsys_codefile.5',
  'man5/ucsdpsys_errors.5',
  'man5/ucsdpsys_opcodes.5',
)
