test_env = environment()
test_env.prepend('PATH', fs.parent(test_cardinal_exe.full_path()))
test_env.prepend('PATH', fs.parent(test_long_integer_exe.full_path()))
test_env.prepend('PATH', fs.parent(assemble_exe.full_path()))
test_env.prepend('PATH', fs.parent(charset_exe.full_path()))
test_env.prepend('PATH', fs.parent(compile_exe.full_path()))
test_env.prepend('PATH', fs.parent(depends_exe.full_path()))
test_env.prepend('PATH', fs.parent(disassemble_exe.full_path()))
test_env.prepend('PATH', fs.parent(downcase_exe.full_path()))
test_env.prepend('PATH', fs.parent(errors_exe.full_path()))
test_env.prepend('PATH', fs.parent(foto_exe.full_path()))
test_env.prepend('PATH', fs.parent(libmap_exe.full_path()))
test_env.prepend('PATH', fs.parent(librarian_exe.full_path()))
test_env.prepend('PATH', fs.parent(link_exe.full_path()))
test_env.prepend('PATH', fs.parent(littoral_exe.full_path()))
test_env.prepend('PATH', fs.parent(opcodes_exe.full_path()))
test_env.prepend('PATH', fs.parent(osmakgen_exe.full_path()))
test_env.prepend('PATH', fs.parent(pretty_exe.full_path()))
test_env.prepend('PATH', fs.parent(setup_exe.full_path()))
test_env.prepend('PATH', meson.project_source_root() / 'script')

subdir('00')
subdir('01')
subdir('02')
subdir('03')
subdir('05')
subdir('06')
subdir('07')
