assemble_grammar_ch = bison_gen.process(
  'grammar.y', preserve_path_from : meson.project_source_root(),
)

assemble_sources = [
  assemble_grammar_ch,
  'assembler.cc',
  'expression/6502.cc',
  'expression/6502/absolute.cc',
  'expression/6502/absolute_indexed.cc',
  'expression/6502/absolute_indexed_indirect.cc',
  'expression/6502/absolute_indirect.cc',
  'expression/6502/absolute_indirect_indexed.cc',
  'expression/6502/immediate.cc',
  'expression/addition/asm.cc',
  'expression/addition/linksym.cc',
  'expression/addition/segrel.cc',
  'expression/bitwise_and/asm.cc',
  'expression/bitwise_not/asm.cc',
  'expression/bitwise_or/asm.cc',
  'expression/boolean/asm.cc',
  'expression/dereference/asm.cc',
  'expression/eq/boolean.cc',
  'expression/eq/integer.cc',
  'expression/eq/string.cc',
  'expression/ge/boolean.cc',
  'expression/ge/integer.cc',
  'expression/ge/string.cc',
  'expression/gt/boolean.cc',
  'expression/gt/integer.cc',
  'expression/gt/string.cc',
  'expression/integer/asm.cc',
  'expression/integer_division/asm.cc',
  'expression/le/boolean.cc',
  'expression/le/integer.cc',
  'expression/le/string.cc',
  'expression/linker_reference.cc',
  'expression/lt/boolean.cc',
  'expression/lt/integer.cc',
  'expression/lt/string.cc',
  'expression/modulo/asm.cc',
  'expression/multiplication/asm.cc',
  'expression/name/asm.cc',
  'expression/ne/boolean.cc',
  'expression/ne/integer.cc',
  'expression/ne/string.cc',
  'expression/negate/asm.cc',
  'expression/range_check.cc',
  'expression/segment_relative.cc',
  'expression/special.cc',
  'expression/special/a.cc',
  'expression/special/x.cc',
  'expression/special/y.cc',
  'expression/string/asm.cc',
  'expression/subtraction/asm.cc',
  'expression/subtraction/segrel.cc',
  'expression/xor/asm.cc',
  'lex.cc',
  'listing.cc',
  'main.cc',
  'opcode.cc',
  'opcode/6502.cc',
  'opcode/6502/adc.cc',
  'opcode/6502/and.cc',
  'opcode/6502/asl.cc',
  'opcode/6502/bbr.cc',
  'opcode/6502/bbs.cc',
  'opcode/6502/bcc.cc',
  'opcode/6502/bcs.cc',
  'opcode/6502/beq.cc',
  'opcode/6502/bit.cc',
  'opcode/6502/bmi.cc',
  'opcode/6502/bne.cc',
  'opcode/6502/bpl.cc',
  'opcode/6502/bra.cc',
  'opcode/6502/brk.cc',
  'opcode/6502/bvc.cc',
  'opcode/6502/bvs.cc',
  'opcode/6502/clc.cc',
  'opcode/6502/cld.cc',
  'opcode/6502/cli.cc',
  'opcode/6502/clv.cc',
  'opcode/6502/cmp.cc',
  'opcode/6502/cpx.cc',
  'opcode/6502/cpy.cc',
  'opcode/6502/dea.cc',
  'opcode/6502/dec.cc',
  'opcode/6502/dex.cc',
  'opcode/6502/dey.cc',
  'opcode/6502/eor.cc',
  'opcode/6502/ina.cc',
  'opcode/6502/inc.cc',
  'opcode/6502/inx.cc',
  'opcode/6502/iny.cc',
  'opcode/6502/jmp.cc',
  'opcode/6502/jsr.cc',
  'opcode/6502/lda.cc',
  'opcode/6502/ldx.cc',
  'opcode/6502/ldy.cc',
  'opcode/6502/lsr.cc',
  'opcode/6502/nop.cc',
  'opcode/6502/ora.cc',
  'opcode/6502/pha.cc',
  'opcode/6502/php.cc',
  'opcode/6502/phx.cc',
  'opcode/6502/phy.cc',
  'opcode/6502/pla.cc',
  'opcode/6502/plp.cc',
  'opcode/6502/plx.cc',
  'opcode/6502/ply.cc',
  'opcode/6502/rmb.cc',
  'opcode/6502/rol.cc',
  'opcode/6502/ror.cc',
  'opcode/6502/rti.cc',
  'opcode/6502/rts.cc',
  'opcode/6502/sbc.cc',
  'opcode/6502/sec.cc',
  'opcode/6502/sed.cc',
  'opcode/6502/sei.cc',
  'opcode/6502/smb.cc',
  'opcode/6502/sta.cc',
  'opcode/6502/stp.cc',
  'opcode/6502/stx.cc',
  'opcode/6502/sty.cc',
  'opcode/6502/stz.cc',
  'opcode/6502/tax.cc',
  'opcode/6502/tay.cc',
  'opcode/6502/trb.cc',
  'opcode/6502/tsb.cc',
  'opcode/6502/tsx.cc',
  'opcode/6502/txa.cc',
  'opcode/6502/txs.cc',
  'opcode/6502/tya.cc',
  'opcode/6502/wai.cc',
  'opcode/error.cc',
  'opcode/pcode.cc',
  'opcode/pcode/abi.cc',
  'opcode/pcode/abr.cc',
  'opcode/pcode/adi.cc',
  'opcode/pcode/adj.cc',
  'opcode/pcode/adr.cc',
  'opcode/pcode/bpt.cc',
  'opcode/pcode/cbp.cc',
  'opcode/pcode/cgp.cc',
  'opcode/pcode/chk.cc',
  'opcode/pcode/cip.cc',
  'opcode/pcode/clp.cc',
  'opcode/pcode/csp.cc',
  'opcode/pcode/cxp.cc',
  'opcode/pcode/dif.cc',
  'opcode/pcode/dvi.cc',
  'opcode/pcode/dvr.cc',
  'opcode/pcode/equ.cc',
  'opcode/pcode/equi.cc',
  'opcode/pcode/flo.cc',
  'opcode/pcode/flt.cc',
  'opcode/pcode/geq.cc',
  'opcode/pcode/geqi.cc',
  'opcode/pcode/gtr.cc',
  'opcode/pcode/gtri.cc',
  'opcode/pcode/inc.cc',
  'opcode/pcode/ind.cc',
  'opcode/pcode/inn.cc',
  'opcode/pcode/int.cc',
  'opcode/pcode/ixa.cc',
  'opcode/pcode/ixp.cc',
  'opcode/pcode/ixs.cc',
  'opcode/pcode/lae.cc',
  'opcode/pcode/land.cc',
  'opcode/pcode/lao.cc',
  'opcode/pcode/lda.cc',
  'opcode/pcode/ldb.cc',
  'opcode/pcode/ldc.cc',
  'opcode/pcode/ldci.cc',
  'opcode/pcode/ldcn.cc',
  'opcode/pcode/lde.cc',
  'opcode/pcode/ldl.cc',
  'opcode/pcode/ldm.cc',
  'opcode/pcode/ldo.cc',
  'opcode/pcode/ldp.cc',
  'opcode/pcode/leq.cc',
  'opcode/pcode/leqi.cc',
  'opcode/pcode/les.cc',
  'opcode/pcode/lesi.cc',
  'opcode/pcode/lla.cc',
  'opcode/pcode/lnot.cc',
  'opcode/pcode/lod.cc',
  'opcode/pcode/lor.cc',
  'opcode/pcode/lpa.cc',
  'opcode/pcode/lsa.cc',
  'opcode/pcode/modi.cc',
  'opcode/pcode/mov.cc',
  'opcode/pcode/mpi.cc',
  'opcode/pcode/mpr.cc',
  'opcode/pcode/neq.cc',
  'opcode/pcode/neqi.cc',
  'opcode/pcode/ngi.cc',
  'opcode/pcode/ngr.cc',
  'opcode/pcode/nop.cc',
  'opcode/pcode/rbp.cc',
  'opcode/pcode/rnp.cc',
  'opcode/pcode/sas.cc',
  'opcode/pcode/sbi.cc',
  'opcode/pcode/sbr.cc',
  'opcode/pcode/sgs.cc',
  'opcode/pcode/sind.cc',
  'opcode/pcode/sldc.cc',
  'opcode/pcode/sldl.cc',
  'opcode/pcode/sldo.cc',
  'opcode/pcode/sqi.cc',
  'opcode/pcode/sqr.cc',
  'opcode/pcode/sro.cc',
  'opcode/pcode/srs.cc',
  'opcode/pcode/stb.cc',
  'opcode/pcode/ste.cc',
  'opcode/pcode/stl.cc',
  'opcode/pcode/stm.cc',
  'opcode/pcode/sto.cc',
  'opcode/pcode/stp.cc',
  'opcode/pcode/str.cc',
  'opcode/pcode/uni.cc',
  'opcode/pcode/xit.cc',
  'opcode/pseudo.cc',
  'opcode/pseudo/arch.cc',
  'opcode/pseudo/ascii.cc',
  'opcode/pseudo/asciz.cc',
  'opcode/pseudo/byte.cc',
  'opcode/pseudo/def.cc',
  'opcode/pseudo/error.cc',
  'opcode/pseudo/host.cc',
  'opcode/pseudo/include.cc',
  'opcode/pseudo/list.cc',
  'opcode/pseudo/macro.cc',
  'opcode/pseudo/nolist.cc',
  'opcode/pseudo/print.cc',
  'opcode/pseudo/radix.cc',
  'opcode/pseudo/ref.cc',
  'opcode/pseudo/sbttl.cc',
  'opcode/pseudo/title.cc',
  'opcode/pseudo/word.cc',
  'patch.cc',
  'personality.cc',
  'personality/6502.cc',
  'personality/factory.cc',
  'personality/pcode.cc',
  'personality/pseudo.cc',
  'symbol/expression/asm.cc',
  'type/linksym_relative.cc',
  'type/segment_relative.cc',
  'type/special.cc',
]

assemble_deps = [
  libexplain_dep,
  boost_dep,
]

assemble_exe = executable(
  'ucsdpsys_assemble',
  sources : assemble_sources,
  include_directories : root_inc,
  implicit_include_directories : false,
  dependencies : assemble_deps,
  link_with : lib_lib,
  install : true,
)
