compile_sources = [
  'expression/abs.cc',
  'expression/abs/integer.cc',
  'expression/abs/long_integer.cc',
  'expression/abs/real.cc',
  'expression/addition/address.cc',
  'expression/addition/integer.cc',
  'expression/addition/long_integer.cc',
  'expression/addition/real.cc',
  'expression/address.cc',
  'expression/address/external.cc',
  'expression/address/global.cc',
  'expression/address/globref.cc',
  'expression/address/intermediate.cc',
  'expression/address/local.cc',
  'expression/address/privref.cc',
  'expression/address/publref.cc',
  'expression/assignment/compile.cc',
  'expression/bitwise_and/compile.cc',
  'expression/bitwise_not/compile.cc',
  'expression/bitwise_or/compile.cc',
  'expression/boolean/compile.cc',
  'expression/byte_pointer.cc',
  'expression/cast.cc',
  'expression/char/compile.cc',
  'expression/check_range.cc',
  'expression/comma.cc',
  'expression/enum_tag/compile.cc',
  'expression/eq/boolean.cc',
  'expression/eq/byte_array.cc',
  'expression/eq/integer.cc',
  'expression/eq/long_integer.cc',
  'expression/eq/multi_word.cc',
  'expression/eq/real.cc',
  'expression/eq/set.cc',
  'expression/eq/string.cc',
  'expression/function.cc',
  'expression/function_call/atan.cc',
  'expression/function_call/chr.cc',
  'expression/function_call/cos.cc',
  'expression/function_call/exit.cc',
  'expression/function_call/exp.cc',
  'expression/function_call/fillchar.cc',
  'expression/function_call/halt.cc',
  'expression/function_call/idsearch.cc',
  'expression/function_call/ioresult.cc',
  'expression/function_call/length.cc',
  'expression/function_call/ln.cc',
  'expression/function_call/mark.cc',
  'expression/function_call/memavail.cc',
  'expression/function_call/moveleft.cc',
  'expression/function_call/moveright.cc',
  'expression/function_call/new.cc',
  'expression/function_call/odd.cc',
  'expression/function_call/pwroften.cc',
  'expression/function_call/release.cc',
  'expression/function_call/round.cc',
  'expression/function_call/sin.cc',
  'expression/function_call/sqrt.cc',
  'expression/function_call/str.cc',
  'expression/function_call/time.cc',
  'expression/function_call/treesearch.cc',
  'expression/function_call/unitbusy.cc',
  'expression/function_call/unitclear.cc',
  'expression/function_call/unitread.cc',
  'expression/function_call/unitstatus.cc',
  'expression/function_call/unitwait.cc',
  'expression/function_call/unitwrite.cc',
  'expression/function_call/user_defined.cc',
  'expression/ge/boolean.cc',
  'expression/ge/byte_array.cc',
  'expression/ge/integer.cc',
  'expression/ge/long_integer.cc',
  'expression/ge/real.cc',
  'expression/ge/set.cc',
  'expression/ge/string.cc',
  'expression/gt/boolean.cc',
  'expression/gt/byte_array.cc',
  'expression/gt/integer.cc',
  'expression/gt/long_integer.cc',
  'expression/gt/real.cc',
  'expression/gt/set.cc',
  'expression/gt/string.cc',
  'expression/in/compile.cc',
  'expression/inc.cc',
  'expression/ind.cc',
  'expression/indirect_store.cc',
  'expression/integer/compile.cc',
  'expression/integer_division/compile.cc',
  'expression/integer_division/long_integer.cc',
  'expression/ixp.cc',
  'expression/ixs.cc',
  'expression/ldb.cc',
  'expression/lde.cc',
  'expression/ldl.cc',
  'expression/ldo.cc',
  'expression/ldo_privref.cc',
  'expression/ldo_publref.cc',
  'expression/le/boolean.cc',
  'expression/le/byte_array.cc',
  'expression/le/integer.cc',
  'expression/le/long_integer.cc',
  'expression/le/real.cc',
  'expression/le/set.cc',
  'expression/le/string.cc',
  'expression/lint2lint/compile.cc',
  'expression/lint_from_integer/compile.cc',
  'expression/load.cc',
  'expression/load/indirect.cc',
  'expression/load/indirect_packed.cc',
  'expression/load/local.cc',
  'expression/load/string.cc',
  'expression/load_address.cc',
  'expression/lod.cc',
  'expression/logical_and/compile.cc',
  'expression/logical_not/compile.cc',
  'expression/logical_or/compile.cc',
  'expression/long_integer/compile.cc',
  'expression/lpa.cc',
  'expression/lt/boolean.cc',
  'expression/lt/byte_array.cc',
  'expression/lt/integer.cc',
  'expression/lt/long_integer.cc',
  'expression/lt/real.cc',
  'expression/lt/set.cc',
  'expression/lt/string.cc',
  'expression/modulo/compile.cc',
  'expression/mov.cc',
  'expression/multiplication/integer.cc',
  'expression/multiplication/long_integer.cc',
  'expression/multiplication/real.cc',
  'expression/ne/boolean.cc',
  'expression/ne/byte_array.cc',
  'expression/ne/integer.cc',
  'expression/ne/long_integer.cc',
  'expression/ne/multi_word.cc',
  'expression/ne/real.cc',
  'expression/ne/set.cc',
  'expression/ne/string.cc',
  'expression/negate/integer.cc',
  'expression/negate/long_integer.cc',
  'expression/negate/real.cc',
  'expression/nil/compile.cc',
  'expression/paoc_from_string/compile.cc',
  'expression/real/compile.cc',
  'expression/real_division/compile.cc',
  'expression/real_from_integer/compile.cc',
  'expression/sas.cc',
  'expression/scan/compile.cc',
  'expression/set/compile.cc',
  'expression/set2set/compile.cc',
  'expression/set_difference.cc',
  'expression/set_intersection.cc',
  'expression/set_union.cc',
  'expression/sgs/compile.cc',
  'expression/sqr.cc',
  'expression/sqr/integer.cc',
  'expression/sqr/long_integer.cc',
  'expression/sqr/real.cc',
  'expression/sro.cc',
  'expression/sro_privref.cc',
  'expression/sro_publref.cc',
  'expression/srs/compile.cc',
  'expression/stb.cc',
  'expression/ste.cc',
  'expression/stl.cc',
  'expression/store.cc',
  'expression/store/indirect.cc',
  'expression/store/indirect_packed.cc',
  'expression/str.cc',
  'expression/string/compile.cc',
  'expression/subtraction/integer.cc',
  'expression/subtraction/long_integer.cc',
  'expression/subtraction/real.cc',
  'expression/ternary/compile.cc',
  'expression/trunc.cc',
  'expression/trunc/long_integer.cc',
  'expression/trunc/real.cc',
  'expression/uptr2pptr.cc',
  'expression/writeln.cc',
  'expression/writeln/bytes.cc',
  'expression/writeln/char.cc',
  'expression/writeln/integer.cc',
  'expression/writeln/long_integer.cc',
  'expression/writeln/real.cc',
  'expression/writeln/string.cc',
  'label/compile.cc',
  'main.cc',
  'scope/builtin/compile.cc',
  'scope/function/compile.cc',
  'scope/interface/compile.cc',
  'scope/interface/unitseg.cc',
  'scope/program/compile.cc',
  'scope/record/compile.cc',
  'scope/temporary/compound/compile.cc',
  'scope/temporary/with/compile.cc',
  'scope/unit/compile.cc',
  'statement/case/compile.cc',
  'statement/expression/compile.cc',
  'statement/for/compile.cc',
  'statement/goto/compile.cc',
  'statement/if/compile.cc',
  'statement/infinite_loop/compile.cc',
  'statement/label/compile.cc',
  'statement/until/compile.cc',
  'statement/while/compile.cc',
  'symbol/enumerated/compile.cc',
  'symbol/function/abs.cc',
  'symbol/function/atan.cc',
  'symbol/function/blockread.cc',
  'symbol/function/blockwrite.cc',
  'symbol/function/chr.cc',
  'symbol/function/close.cc',
  'symbol/function/concat.cc',
  'symbol/function/copy.cc',
  'symbol/function/cos.cc',
  'symbol/function/delete.cc',
  'symbol/function/eof.cc',
  'symbol/function/eoln.cc',
  'symbol/function/exit.cc',
  'symbol/function/exp.cc',
  'symbol/function/fillchar.cc',
  'symbol/function/get.cc',
  'symbol/function/gotoxy.cc',
  'symbol/function/halt.cc',
  'symbol/function/idsearch.cc',
  'symbol/function/insert.cc',
  'symbol/function/ioresult.cc',
  'symbol/function/length.cc',
  'symbol/function/ln.cc',
  'symbol/function/log.cc',
  'symbol/function/mark.cc',
  'symbol/function/memavail.cc',
  'symbol/function/moveleft.cc',
  'symbol/function/moveright.cc',
  'symbol/function/new.cc',
  'symbol/function/odd.cc',
  'symbol/function/opennew.cc',
  'symbol/function/openold.cc',
  'symbol/function/ord.cc',
  'symbol/function/page.cc',
  'symbol/function/pos.cc',
  'symbol/function/pred.cc',
  'symbol/function/put.cc',
  'symbol/function/pwroften.cc',
  'symbol/function/read.cc',
  'symbol/function/release.cc',
  'symbol/function/reset.cc',
  'symbol/function/rewrite.cc',
  'symbol/function/round.cc',
  'symbol/function/seek.cc',
  'symbol/function/sin.cc',
  'symbol/function/sqr.cc',
  'symbol/function/sqrt.cc',
  'symbol/function/str.cc',
  'symbol/function/succ.cc',
  'symbol/function/time.cc',
  'symbol/function/treesearch.cc',
  'symbol/function/trunc.cc',
  'symbol/function/unitbusy.cc',
  'symbol/function/unitclear.cc',
  'symbol/function/unitread.cc',
  'symbol/function/unitstatus.cc',
  'symbol/function/unitwait.cc',
  'symbol/function/unitwrite.cc',
  'symbol/function/user_defined.cc',
  'symbol/functor/constructor.cc',
  'symbol/functor/destructor.cc',
  'symbol/variable/external/compile.cc',
  'symbol/variable/normal/compile.cc',
  'symbol/variable/normal/global.cc',
  'symbol/variable/normal/globref.cc',
  'symbol/variable/normal/privref.cc',
  'symbol/variable/normal/publref.cc',
  'translator/compile.cc',
  'translator/compile/address_of_expression_factory.cc',
  'translator/compile/fix_binary_set_operands.cc',
  'translator/compile/writeln_statement_factory.cc',
]

compile_deps = [
  libexplain_dep,
  boost_dep,
]

compile_exe = executable(
  'ucsdpsys_compile',
  sources : compile_sources,
  include_directories : root_inc,
  implicit_include_directories : false,
  dependencies : compile_deps,
  link_with : lib_lib,
  install : true,
)
